# Mosze

./: .gitignore  Computer.cpp  Computer.hpp  Console.cpp  Console.hpp  JSON.cpp  JSON.hpp  Notebook.cpp  Notebook.hpp  Phone.cpp  Phone.hpp  Product.cpp  Product.hpp  README.md  Warehouse.cpp  Warehouse.hpp  _computer_8hpp_source.html  _console_8hpp_source.html  _j_s_o_n_8hpp_source.html  _notebook_8hpp_source.html  _phone_8hpp_source.html  _product_8hpp_source.html  _warehouse_8hpp_source.html  annotated.html  class_computer-members.html  class_computer.html  class_computer__inherit__graph.map  class_computer__inherit__graph.md5  class_console-members.html  class_console.html  class_console__coll__graph.md5  class_console__inherit__graph.map  class_j_s_o_n-members.html  class_j_s_o_n.html  class_notebook-members.html  class_notebook.html  class_notebook__coll__graph.md5  class_notebook__inherit__graph.map  class_phone-members.html  class_phone.html  (+38 more)
Docker/: doxygen_docker  parsertest_docker  test_docker
computers/: AMDcreatordaily.json  predator.json
consoles/: consoles.txt  ps5.json  xboxSeriesX.json
notebooks/: Vivobooks14.json  macbookPro16.json  notebooks.txt
phones/: galaxyNote.json  iphoneX.json  phones.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+4 more)
test/: CMakeLists.txt  unit_test.cpp
(+3 files in other folders)
